.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Occupational_Health__c.object
<CustomObject>
    <description>Used to record Occupational Health incidents</description>
    <fields>
        <fullName>xcdhcm__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Occupational Healths</relationshipLabel>
        <relationshipName>Occupational_Healths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Leaving_Date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c , 
xcdhcm__Employee_leaving_date__c &lt;  xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c  
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Medical_Test_Type__c</fullName>
        <label>Medical test type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Outcome__c</fullName>
        <label>Outcome</label>
        <type>TextArea</type>
    </fields>
    <label>Occupational Health</label>
    <nameField>
        <displayFormat>OH-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occupational Health</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>